# snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  shell.html
src/: main.c
